refactor: рефакторинг
- InMemoryHistoryManager: замена функций remove и add на removeFirst и addLast
- InMemoryTaskManager: переписан код метода updateEpicStatus : реперь работает через boolean
- добавлен README.md