@@ -7,7 +7,7 @@ import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
     private static final int HISTORY_SIZE = 10;
-    private final List<Task> history;
+    private final LinkedList<Task> history;
 
     public InMemoryHistoryManager() {
         this.history = new LinkedList<>();
@@ -21,8 +21,8 @@ public class InMemoryHistoryManager implements HistoryManager {
     @Override
     public void add(Task task) {
         if (history.size() == HISTORY_SIZE) {
-            history.remove(0);
+            history.removeFirst();
         }
-        history.add(task);
+        history.addLast(task);
     }
 }
